oldMeta/NewTs/unpackaged/Telangana/objects/Adhaar_Link__c.object
<CustomObject>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>District</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandal__c</fullName>
        <label>Mandal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>District__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Mandal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passbook_Number__c</fullName>
        <label>Passbook Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_ID__c</fullName>
        <label>Register ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mandal__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Village</valueSetName>
        </valueSet>
    </fields>
    <label>Adhaar Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADL-{00}</displayFormat>
        <label>Adhaar Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhaar Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adhaar_Link_Reg_Id_Format</fullName>
        <active>true</active>
        <errorConditionFormula>/*NOT( Register_ID__c == upper(Register_ID__c))*/
or(NOT( Register_ID__c ==  UPPER( Register_ID__c ) ), (not( CONTAINS(Register_ID__c,&apos;-&apos;))))</errorConditionFormula>
        <errorDisplayField>Register_ID__c</errorDisplayField>
        <errorMessage>enter upper case letters like RD-11(first two letters must be upper case)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Passbook_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber( Passbook_Number__c ),len( Passbook_Number__c )&lt;=4)</errorConditionFormula>
        <errorDisplayField>Passbook_Number__c</errorDisplayField>
        <errorMessage>Enter the passbook Number of five digits only</errorMessage>
    </validationRules>
</CustomObject>